实现权限分配